rollout/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-stable-service
  namespace: default
  labels:
    app: fastapi-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: fastapi-app

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-canary-service
  namespace: default
  labels:
    app: fastapi-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: fastapi-app
